[package]
name = "grrs"
version = "0.1.0"
authors = ["Julian Weins"]
license = "MIT"
description = "A tool to search files for keywords"
readme = "README.md"
homepage = "https://github.com/juweins/rust-playground/grrs"
repository = "https://github.com/juweins/rust-playground/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"
lipsum = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"
